# opengl_aruco_detector

./: CMakeLists.txt  README.md
include/ui/: aruco_window.hpp  camera_window.hpp  iwindow.hpp  main_window.hpp  scene_window.hpp
include/utils/: camera_manager.hpp  camera_utils.hpp
src/: CMakeLists.txt  main.cpp
src/ui/: aruco_window.cpp  camera_window.cpp  main_window.cpp  scene_window.cpp
src/utils/: camera_manager.cpp  camera_utils.cpp
